--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -39,20 +39,20 @@ $white: #fff;
 
 // Typography ///
 $font_title: 'Asap';
-$font_footer_header: 'PT Sans';
+$font_header_footer: 'PT Sans';
 $font_body: 'Noto Sans';
 $font_main: 'Noto Sans';
 ///Font Sizing ///
 // mobile sizes ///
-$h1_size_mob: 2.5rem;
-$h2_size_mob: 2rem;
-$h3_size_mob: 1.3rem;
-$font_body_size_mob: 1.6rem;
+$h1_size_mob: 1.9rem;
+$h2_size_mob: 1.6rem;
+$h3_size_mob: 1.2rem;
+$font_body_size_mob: 1.9rem;
 
 
 /// desktop sizes ////
-$h1_size_desktop: 3rem;
-$h2_size_desktop: 2.2rem;
-$h3_size_desktop: 1.7rem;
-$font_body_size_desktop: 1.7rem;
+$h1_size_desktop: 2.8rem;
+$h2_size_desktop: 2rem;
+$h3_size_desktop: 1.5rem;
+$font_body_size_desktop: 2.1rem;
 $font_line-height-body: 1.5;
