--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -8,7 +8,7 @@
     width:100%;
   }
   @include flex (center,center);
-  font-family: $font_footer_header;
+  font-family: $font_header_footer;
   overflow: hidden;
   font-size: 0.8rem;
   min-width: 380px;
@@ -27,9 +27,9 @@ height: 30px;
   padding-left: 0px;
     li{
       line-height: normal;
-      font-size: 1.1rem;
-    padding: 0px 10px 0px 10px;
-      display: inline-block;
+    font-size: 1.3rem;
+    padding: 0 10px;
+    display: inline-block;
       a{
         color:#D3E0DE;
        text-decoration: none;
@@ -56,17 +56,17 @@ margin: 0px auto;
 
 i{
   display: inline-block;
-  margin: 0px;
-  padding: 3px;
-  margin-right: 5px;
-  width: 24px;
-  color: #fff;
-  border: solid 1px $white;
-  border-radius: 50%;
+    margin: 0;
+    padding: 3.9px;
+    margin-right: 5px;
+    width: 46px;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50%;
 }
 }
   a{
-    font-size: 0.8rem;
+    font-size: 1.1rem;
     margin-right: 10px;
       color:#D3E0DE;
      text-decoration: none;
