--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -235,7 +235,7 @@ th {
 --------------------------------------------------------------*/
 p,
 li {
-  font-size: 1.6rem;
+  font-size: 1.9rem;
   font-family: "Asap"; }
 
 h1, h2, h3 {
@@ -244,27 +244,30 @@ h1, h2, h3 {
   font-weight: lighter; }
 
 h1 {
-  font-size: 2.5rem; }
+  font-size: 1.9rem; }
 
 h2 {
-  font-size: 2rem; }
+  font-size: 1.6rem; }
 
 h3 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-family: "Asap"; }
 
 @media (min-width: 60rem) {
   p,
   li {
-    font-size: 1.7rem; }
+    font-size: 2.1rem; }
   h1 {
     font-family: "Asap";
     font-weight: lighter;
-    font-size: 3rem; }
+    font-size: 2.8rem; }
   h2 {
-    font-size: 2.2rem; }
+    font-size: 2rem; }
   h3 {
-    font-size: 1.7rem; } }
+    font-size: 1.5rem; } }
+
+body {
+  line-height: 3rem; }
 
 /******* Headings *****/
 body,
@@ -275,8 +278,7 @@ textarea {
   color: #404040;
   font-family: "Noto Sans";
   font-size: 16px;
-  font-size: 1rem;
-  line-height: 1.5; }
+  font-size: 1rem; }
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
@@ -311,39 +313,6 @@ html {
   font-size: 16px;
   font-size: 1rem; }
 
-p,
-li {
-  font-size: 1.6rem;
-  font-family: "Asap"; }
-
-h1, h2, h3 {
-  text-transform: capitalize;
-  font-family: "Asap";
-  font-weight: lighter; }
-
-h1 {
-  font-size: 2.5rem; }
-
-h2 {
-  font-size: 2rem; }
-
-h3 {
-  font-size: 1.3rem;
-  font-family: "Asap"; }
-
-@media (min-width: 60rem) {
-  p,
-  li {
-    font-size: 1.7rem; }
-  h1 {
-    font-family: "Asap";
-    font-weight: lighter;
-    font-size: 3rem; }
-  h2 {
-    font-size: 2.2rem; }
-  h3 {
-    font-size: 1.7rem; } }
-
 *,
 *:before,
 *:after {
@@ -353,10 +322,9 @@ body {
   background: #fff;
   font-family: "Noto Sans";
   box-sizing: border-box;
-  line-height: 2rem;
   margin: 0 auto; }
   body p, body li {
-    line-height: 2rem; }
+    line-height: 3rem; }
 
 blockquote, q {
   quotes: "" ""; }
@@ -646,9 +614,15 @@ div .menu-primary-menu-container {
         margin: 0 5px; } }
 
 .responsive-menu-button {
-  margin-top: 0.5rem !important; }
+  margin-top: 0.1rem !important; }
 
-.responsive-menu-inner, .responsive-menu-inner::before, .responsive-menu-inner::after {
+.responsive-menu-box {
+  width: 34px !important;
+  height: 22px !important; }
+
+.responsive-menu-inner,
+.responsive-menu-inner::before,
+.responsive-menu-inner::after {
   background-color: #D8D8D8 !important;
   width: 34px !important;
   height: 4px !important;
@@ -658,6 +632,8 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
   box-shadow: none !important; }
 
 button#responsive-menu-button {
+  top: 6px !important;
+  right: 8% !important;
   background-color: transparent !important; }
 
 #primary-menu li.current-menu-item a {
@@ -680,7 +656,11 @@ button#responsive-menu-button {
   .montessori-logo img {
     position: relative;
     height: 100%;
-    width: 100%; }
+    width: 100%;
+    padding-top: 25px; }
+    @media (min-width: 60rem) {
+      .montessori-logo img {
+        padding-top: 0px; } }
     .montessori-logo img a {
       bottom: -20px;
       cursor: pointer;
@@ -689,7 +669,7 @@ button#responsive-menu-button {
 
 .main-menu-wrapper {
   width: 100%;
-  height: 80px;
+  height: 65px;
   display: flex;
   display: -ms-flexbox;
   -ms-flex-align: center;
@@ -698,6 +678,7 @@ button#responsive-menu-button {
       justify-content: space-between; }
   @media (min-width: 60rem) {
     .main-menu-wrapper {
+      height: 90px;
       white-space: nowrap;
       overflow: hidden; } }
 
@@ -715,30 +696,34 @@ button#responsive-menu-button {
 div .secondary {
   text-align: right;
   max-width: 100%;
-  max-height: 100%;
+  height: 100%;
   font-family: "PT Sans";
   text-align: right;
   padding-right: 2rem;
-  margin-top: 20px;
+  margin-top: 10px;
   background-color: #248E6A; }
   @media (min-width: 60rem) {
     div .secondary {
-      white-space: normal;
-      overflow: hidden;
+      white-space: inherit;
       padding: 5px 20 10px 10;
-      width: 100%; } }
+      width: 100%;
+      height: 65px; } }
   div .secondary .active {
     background-color: #4FC8A1; }
   div .secondary li {
     display: inline-block;
-    padding: 10px; }
+    padding: 7px 15px; }
+    @media (min-width: 60rem) {
+      div .secondary li {
+        padding: 7px 25px; } }
     div .secondary li a {
-      font-size: 1.6rem;
+      font-weight: lighter;
+      font-size: 1.3rem;
       text-decoration: none;
       color: white; }
-
-#top {
-  color: black; }
+      @media (min-width: 60rem) {
+        div .secondary li a {
+          font-size: 1.5rem; } }
 
 /*--------------------------------------------------------------
 # Footer
@@ -773,8 +758,8 @@ div .secondary {
     padding-left: 0px; }
     .footer-block-item1 ul li {
       line-height: normal;
-      font-size: 1.1rem;
-      padding: 0px 10px 0px 10px;
+      font-size: 1.3rem;
+      padding: 0 10px;
       display: inline-block; }
       .footer-block-item1 ul li a {
         color: #D3E0DE;
@@ -797,15 +782,15 @@ div .secondary {
     margin: 0px auto; }
     .footer-block-item2 p i {
       display: inline-block;
-      margin: 0px;
-      padding: 3px;
+      margin: 0;
+      padding: 3.9px;
       margin-right: 5px;
-      width: 24px;
+      width: 46px;
       color: #fff;
-      border: solid 1px #fff;
+      border: 1px solid #fff;
       border-radius: 50%; }
   .footer-block-item2 a {
-    font-size: 0.8rem;
+    font-size: 1.1rem;
     margin-right: 10px;
     color: #D3E0DE;
     text-decoration: none; }
@@ -1398,7 +1383,7 @@ body {
             -webkit-backface-visibility: hidden;
             backface-visibility: hidden; } }
     .main-philosophy .philosophy-grid h2 {
-      -index: 1;
+      z-index: 1;
       margin: 0;
       text-align: center;
       display: inline-block;
@@ -1408,17 +1393,17 @@ body {
       overflow: hidden;
       padding: 0;
       bottom: 35px;
-      line-height: 1.3rem;
+      line-height: 1.2rem;
       position: absolute;
       right: 24px;
       position: absolute; }
       .main-philosophy .philosophy-grid h2 a {
         color: #248E6A;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         font-weight: bold; }
       @media (min-width: 60rem) {
         .main-philosophy .philosophy-grid h2 a {
-          font-size: 1.7rem; }
+          font-size: 1.3rem; }
         .main-philosophy .philosophy-grid h2 .show {
           font-size: 1.4rem;
           -webkit-backface-visibility: hidden;
@@ -1596,24 +1581,28 @@ body {
     padding-top: 30px; }
 
 /*Start Resources Section  */
-.green-btn {
-  background-color: #4fc8a1;
-  border-radius: 6px;
-  font-family: Noto Sans;
-  font-size: 14px;
-  font-weight: 700;
-  text-align: center;
-  line-height: 28px;
-  color: #fff;
-  padding: 12px 39px;
-  text-shadow: none;
-  letter-spacing: 0.8px;
-  display: inline-block; }
-  @media (min-width: 60rem) {
-    .green-btn {
-      width: 331px;
-      height: 65px;
-      font-size: 16px; } }
+.main-resources {
+  height: 400px;
+  position: relative; }
+  .main-resources .green-btn {
+    background-color: #4fc8a1;
+    border-radius: 6px;
+    font-family: Noto Sans;
+    font-size: 14px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 28px;
+    color: #fff;
+    padding: 10px 20px;
+    text-shadow: none;
+    letter-spacing: 0.8px;
+    display: block;
+    margin: 10px auto; }
+    @media (min-width: 60rem) {
+      .main-resources .green-btn {
+        width: 331px;
+        height: 65px;
+        font-size: 20px; } }
 
 /*--------------------------------------------------------------
 # About Page
@@ -1630,7 +1619,7 @@ body {
       align-items: center; }
   .about-wrapper h1 {
     font-family: "Asap";
-    font-size: 2.5rem;
+    font-size: 1.9rem;
     font-weight: normal;
     line-height: 2.625rem;
     text-align: left;
@@ -1742,7 +1731,7 @@ site-main .a green-btn {
   background-color: grey; }
   .nw-program-wrapper h1 {
     font-family: "Asap";
-    font-size: 2.5rem;
+    font-size: 1.9rem;
     font-weight: normal;
     line-height: 2.625rem;
     text-align: left;
