add and implement google phonts to the website

--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -38,10 +38,10 @@ $white: #fff;
 
 
 // Typography ///
-$font_title: 'Asap';
-$font_header_footer: 'PT Sans';
-$font_body: 'Noto Sans';
-$font_main: 'Noto Sans';
+$font_title: 'Asap',sans-serif;
+$font_header_footer: 'PT Sans',sans-serif;
+$font_body: 'Noto Sans',sans-serif;
+$font_main: 'Noto Sans',sans-serif;
 ///Font Sizing ///
 // mobile sizes ///
 $h1_size_mob: 1.9rem;
