--- a/themes/montessori-theme/sass/_fonts.scss
+++ b/themes/montessori-theme/sass/_fonts.scss
@@ -1,3 +1,6 @@
 /*--------------------------------------------------------------
 # Embedded Fonts
 --------------------------------------------------------------*/
+@import url('https://fonts.googleapis.com/css?family=Asap');
+@import url('https://fonts.googleapis.com/css?family=PT');
+@import url('https://fonts.googleapis.com/css?family=Noto');
