--- a/themes/montessori-theme/style.css
+++ b/themes/montessori-theme/style.css
@@ -51,6 +51,9 @@ TABLE OF CONTENTS:
 /*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
+@import url("https://fonts.googleapis.com/css?family=Asap");
+@import url("https://fonts.googleapis.com/css?family=PT");
+@import url("https://fonts.googleapis.com/css?family=Noto");
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -236,11 +239,11 @@ th {
 p,
 li {
   font-size: 1.9rem;
-  font-family: "Asap"; }
+  font-family: "Asap", sans-serif; }
 
 h1, h2, h3 {
   text-transform: capitalize;
-  font-family: "Asap";
+  font-family: "Asap", sans-serif;
   font-weight: lighter; }
 
 h1 {
@@ -251,14 +254,14 @@ h2 {
 
 h3 {
   font-size: 1.2rem;
-  font-family: "Asap"; }
+  font-family: "Asap", sans-serif; }
 
 @media (min-width: 60rem) {
   p,
   li {
     font-size: 2.1rem; }
   h1 {
-    font-family: "Asap";
+    font-family: "Asap", sans-serif;
     font-weight: lighter;
     font-size: 2.8rem; }
   h2 {
@@ -276,7 +279,7 @@ input,
 select,
 textarea {
   color: #404040;
-  font-family: "Noto Sans";
+  font-family: "Noto Sans", sans-serif;
   font-size: 16px;
   font-size: 1rem; }
 
@@ -289,7 +292,7 @@ dfn, cite, em, i {
   font-style: italic; }
 
 code, kbd, tt, var {
-  font-family: "Noto Sans";
+  font-family: "Noto Sans", sans-serif;
   font-size: 15px;
   font-size: 0.9375rem; }
 
@@ -309,7 +312,7 @@ big {
 
 html {
   box-sizing: border-box;
-  font-family: "Noto Sans";
+  font-family: "Noto Sans", sans-serif;
   font-size: 16px;
   font-size: 1rem; }
 
@@ -320,7 +323,7 @@ html {
 
 body {
   background: #fff;
-  font-family: "Noto Sans";
+  font-family: "Noto Sans", sans-serif;
   box-sizing: border-box;
   margin: 0 auto; }
   body p, body li {
@@ -583,7 +586,7 @@ div .menu-primary-menu-container {
 .main-navigation-container {
   width: 100%;
   background-color: #fff;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   display: flex;
   display: -ms-flexbox;
   -ms-flex-align: center;
@@ -697,7 +700,7 @@ div .secondary {
   text-align: right;
   max-width: 100%;
   height: 100%;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   text-align: right;
   padding-right: 2rem;
   margin-top: 10px;
@@ -736,7 +739,7 @@ div .secondary {
       align-items: center;
   -ms-flex-pack: center;
       justify-content: center;
-  font-family: "PT Sans";
+  font-family: "PT Sans", sans-serif;
   overflow: hidden;
   font-size: 0.8rem;
   min-width: 380px;
@@ -1415,7 +1418,7 @@ body {
     .main-philosophy .philosophy-grid p {
       text-align: left;
       display: inline-block;
-      font-family: "Noto Sans";
+      font-family: "Noto Sans", sans-serif;
       position: absolute;
       top: -17px;
       overflow-y: scroll;
@@ -1618,7 +1621,7 @@ body {
   -ms-flex-align: center;
       align-items: center; }
   .about-wrapper h1 {
-    font-family: "Asap";
+    font-family: "Asap", sans-serif;
     font-size: 1.9rem;
     font-weight: normal;
     line-height: 2.625rem;
@@ -1730,7 +1733,7 @@ site-main .a green-btn {
       align-items: center;
   background-color: grey; }
   .nw-program-wrapper h1 {
-    font-family: "Asap";
+    font-family: "Asap", sans-serif;
     font-size: 1.9rem;
     font-weight: normal;
     line-height: 2.625rem;
