--- a/themes/montessori-theme/sass/_header.scss
+++ b/themes/montessori-theme/sass/_header.scss
@@ -5,9 +5,11 @@
 	top: 0;
 }
 /////****Start Main Menu**** ////
+
 .main-navigation-container {
 	display: flex;
 }
+
 .main-navigation {
 	padding-top: 40px;
 	margin-right: 38px;
@@ -82,31 +84,38 @@ div .menu-primary-menu-container {
 	}
 }
 ///////The Hamburger Menu Section//////
+
 .responsive-menu-button {
 	margin-top: 0.1rem !important;
 }
+
 .responsive-menu-box {
-    width: 34px!important;
-    height: 22px!important;
-	}
+	width: 34px!important;
+	height: 22px!important;
+}
+
 .responsive-menu-inner,
-.responsive-menu-inner::before,
- .responsive-menu-inner::after {
-    background-color: #D8D8D8!important;
-		width: 34px!important;;
-				height: 4px!important;
-    border-radius: 0px!important;
+.responsive-menu-inner::after,
+.responsive-menu-inner::before {
+	background-color: #D8D8D8!important;
+	width: 34px!important;
+	height: 4px!important;
+	border-radius: 0px!important;
 }
-button, input[type="button"], input[type="reset"], input[type="submit"] {
 
-    box-shadow: none !important;
-
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+	box-shadow: none !important;
 }
+
 button#responsive-menu-button {
-	    top: 6px!important;
-	    right: 8%!important;
-    background-color: transparent!important;
+	top: 6px!important;
+	right: 8%!important;
+	background-color: transparent!important;
 }
+
 #primary-menu li.current-menu-item {
 	a {
 		border-top: 6px solid #57B79F;
@@ -115,6 +124,7 @@ button#responsive-menu-button {
 	}
 }
 /////**** The Brand Logo Section ***/////
+
 .montessori-logo {
 	padding: 0;
 	margin: 10px 0 20px 30px;
@@ -130,11 +140,13 @@ button#responsive-menu-button {
 
 	img {
 		position: relative;
-	height: 100%;
-	width: 100%;
-	padding-top: 25px;
-	@include desktop{padding-top: 0px;
-}
+		height: 100%;
+		width: 100%;
+		padding-top: 25px;
+		@include desktop {
+			padding-top: 0;
+		}
+
 		a {
 			bottom: -20px;
 			cursor: pointer;
@@ -149,7 +161,7 @@ button#responsive-menu-button {
 	height: 65px;
 	@include flex(center,space-between);
 	@include desktop {
-	height:90px;
+		height: 90px;
 		white-space: nowrap;
 		overflow: hidden;
 	}
@@ -164,20 +176,44 @@ button#responsive-menu-button {
 	top: 0;
 }
 
-
-
 .home .site-header {
 	position: absolute;
 }
 ////**Sub Menu Section**/////
 
+div {
+	.secondary li a {
+		padding: 0 10px;
+	}
+}
+
+div {
+	position: relative;
+
+	.secondary li:nth-child(3) a {
+		border-left: solid 1px white;
+		border-right: solid 1px white;
+	}
+}
+
+div {
+	position: relative;
+
+	.secondary li:nth-child(4) a {
+		padding: 0 20px;
+		border-left: solid 1px white;
+		border-right: solid 1px white;
+	}
+}
+
 div .secondary {
+	position: relative;
 	text-align: right;
 	max-width: 100%;
 	height: 100%;
-	font-family:$font_header_footer;
+	font-family: $font_header_footer;
 	@include desktop {
-		white-space:inherit;;
+		white-space: inherit;
 		padding: 5px 20 10px 10;
 		width: 100%;
 		height: 65px;
@@ -194,16 +230,15 @@ div .secondary {
 	li {
 		display: inline-block;
 		padding: 7px 15px;
-		@include desktop{
+		@include desktop {
 			padding: 7px 25px;
 		};
 
 		a {
 			font-weight: lighter;
 			font-size: 1.3rem;
-			@include desktop{
+			@include desktop {
 				font-size: 1.5rem;
-
 			}
 			text-decoration: none;
 			color: white;
