--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -48,20 +48,24 @@
 	display: flex;
 	flex-direction: column;
 
-	.funding-img,.money-spend-img {
+	.funding-img,
+	.money-spend-img {
 		margin-top: 100px;
 		display: flex;
 		justify-content: center;
-		img{
+
+		img {
 			width: 95%;
 			height: 95%;
 			margin-right: 2px;
 		}
 	}
+
 	.funding-btn {
 		display: flex;
 		justify-content: center;
-		.green-btn{
+
+		.green-btn {
 			padding: 10px;
 			width: 44.666%;
 			margin-right: 2px;
@@ -69,25 +73,26 @@
 	}
 }
 //School List Section
-.school-list{
+
+.school-list {
 	display: flex;
 	flex-direction: column;
-	    .school-img{
-				display: flex;
-				justify-content: center;
-				img{
-				width:80%;
-				height:80%;
 
-		    }
-			 .address	.phone {
-				font-weight: bolder;
-			}
-   	}
+	.school-img {
+		display: flex;
+		justify-content: center;
+
+		img {
+			width: 80%;
+			height: 80%;
+		}
+
+		.address .phone {
+			font-weight: bolder;
+		}
+	}
 }
-
 //Preschools List Section
-
 .preschools-list {
 	padding: 1px;
 
@@ -96,38 +101,42 @@
 	}
 }
 //Enrollment Section
+
 .enroll {
-display: flex;
-flex-direction: column;
+	display: flex;
+	flex-direction: column;
+
 	.enroll-block {
 		max-width: 70%;
 		display: flex;
 		margin: 40px auto;
 		flex-direction: column;
+
 		.enroll-img {
 			margin-bottom: 50px;
 		}
-		.enroll-btn{
+
+		.enroll-btn {
 			align-self: center;
 
-		.green-btn {
-			align-self: center;
-			height: 47px;
-			display: inline-block;
-			text-align: center;
-			background-color: #4FC8A1;
-			border-radius: 6px;
-			font-family: "Noto Sans";
-			font-size: 15px;
-			font-weight: bold;
-			text-align: center;
-			line-height: 30px;
-			color: #fff;
-			text-shadow: none;
-			letter-spacing: 0.8px;
-	  	}
-  	}
-  }
+			.green-btn {
+				align-self: center;
+				height: 47px;
+				display: inline-block;
+				text-align: center;
+				background-color: #4FC8A1;
+				border-radius: 6px;
+				font-family: "Noto Sans";
+				font-size: 15px;
+				font-weight: bold;
+				text-align: center;
+				line-height: 30px;
+				color: #fff;
+				text-shadow: none;
+				letter-spacing: 0.8px;
+			}
+		}
+	}
 }
 //teacher list Section
 
@@ -135,108 +144,105 @@ flex-direction: column;
 	padding: 2px;
 	flex-wrap: wrap;
 	display: flex;
-	.teacher-grid{
+	.teacher-grid {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-around;
 
-
-
-	.teacher-block {
-		flex: .03;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		@include tablet{
-			flex: .03;
-    }
-		@include desktop{
-			flex: 1;
-		}
-	}
-
-
-	.flip-container {
-		display: block;
-		box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
-		background: #aff1d3;
-		border-radius: 50%;
-
-
-		.flipper {
-			flex: 1 0 auto;
+		.teacher-block {
+			flex: 0.03;
 			display: flex;
-			width: 50%;
-			position: relative;
-			-webkit-transition: 1.9s;
-			-webkit-transform-style: preserve-3d;
-			-moz-transition: 1.9s;
-			-moz-transform-style: preserve-3d;
-			transition: 1.9s;
-			transform-style: preserve-3d;
-			.teacher_det{
-				display: block;
+			flex-direction: column;
+			align-items: center;
+			@include tablet {
+				flex: 0.03;
 			}
-
-			p {
-				font-size: 50%;
-				line-height: 30px;
+			@include desktop {
+				flex: 1;
 			}
 		}
 
-		.front {
-			position: absolute;
-			background-size: cover;
+		.flip-container {
+			display: block;
+			box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
+			background: #aff1d3;
 			border-radius: 50%;
-			flex: 2;
 
-			img {
+			.flipper {
+				flex: 1 0 auto;
+				display: flex;
+				width: 50%;
+				position: relative;
+				-webkit-transition: 1.9s;
+				-webkit-transform-style: preserve-3d;
+				-moz-transition: 1.9s;
+				-moz-transform-style: preserve-3d;
+				transition: 1.9s;
+				transform-style: preserve-3d;
+
+				.teacher_det {
+					display: block;
+				}
+
+				p {
+					font-size: 50%;
+					line-height: 30px;
+				}
+			}
+
+			.front {
+				position: absolute;
+				background-size: cover;
 				border-radius: 50%;
+				flex: 2;
+
+				img {
+					border-radius: 50%;
+				}
+			}
+
+			.back {
+				border-radius: 50%;
+				position: absolute;
+				width: 125px;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				height: 125px;
+				text-align: center;
+				right: 3px;
+				-webkit-transform: rotateY(180deg);
+				-moz-transform: rotateY(180deg);
+				transform: rotateY(180deg);
 			}
 		}
 
-		.back {
-			border-radius: 50%;
-			position: absolute;
-			width: 125px;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			height: 125px;
-			text-align: center;
-			right: 3px;
+		.flip-container.hover .flipper,
+		.flip-container:hover .flipper {
 			-webkit-transform: rotateY(180deg);
 			-moz-transform: rotateY(180deg);
 			transform: rotateY(180deg);
 		}
-	}
 
-	.flip-container.hover .flipper,
-	.flip-container:hover .flipper {
-		-webkit-transform: rotateY(180deg);
-		-moz-transform: rotateY(180deg);
-		transform: rotateY(180deg);
-	}
+		.back,
+		.flip-container,
+		.front {
+			width: 125px;
+			height: 125px;
+		}
 
-	.back,
-	.flip-container,
-	.front {
-		width: 125px;
-		height: 125px;
-	}
+		.back,
+		.front {
+			-webkit-backface-visibility: hidden;
+			-moz-backface-visibility: hidden;
+			backface-visibility: hidden;
+		}
 
-	.back,
-	.front {
-		-webkit-backface-visibility: hidden;
-		-moz-backface-visibility: hidden;
-		backface-visibility: hidden;
-	}
+		.teacher_det {
+			text-align: center;
 
-	.teacher_det {
-		text-align: center;
-
-		p {
-			font-size: 50%;
+			p {
+				font-size: 50%;
+			}
 		}
 	}
-}
 }
