--- a/themes/montessori-theme/sass/_front-page.scss
+++ b/themes/montessori-theme/sass/_front-page.scss
@@ -1,18 +1,18 @@
-//front page
+//-------------------front page---------------------------//
+
 // media screen for mobile (max-width: 480px)
 .site-main {
   margin: 0;
   padding: 0;
     .home {
       margin: 0 auto;
-    //   padding: 0px 90px;
-    // background-color: hotpink;
+      // padding: 0px 90px;
         .home-wrapper {
             width: 480px;
             height: 585px;
             background-color: rgba(0,0,0,0.74);
             @include desktop {
-                width: 35%;
+                width: 541.64px;
                 height: 555px;
                 background-color: rgba(0,0,0,0.74);
                 position: relative;
@@ -77,7 +77,7 @@
                     max-width: 320px;
                     margin: 90px 100px;
                     text-align: center;
-                }
+                } 
             }
             // }//welcome-wrapper
         }
@@ -191,7 +191,7 @@
     }
     // this is for the support section
     .support-wrapper {
-        // width: 480px;
+        width: 480px;
         height: auto;
         .information {
             height: auto;
@@ -215,44 +215,27 @@
                     width: 1283px;
                 }
             }
-            .support-img-wrapper{
-                text-align: center;
-                @include desktop {
-                    display: inline-block;
-                    right: 40px;
-                    position: absolute;
-                }
             img {
                 width: 287px;
-                // height: 470px;
-                // @include desktop {
-                //     display: inline-flex;
-                //     // right: 40px;
-                //     position: absolute;
-                //     right: 35px;
-                // }
-                p{
-                .image-text {
-                    display: inline-block;
+                height: 470px;
+                @include desktop {
+                    float: right;
+                    position: absolute;
+                    right: 35px;
+                }
+                p {
                     width: 470px;
                     font-family: "Noto Sans";
                     font-size: 20px;
-                    line-height: 40px;
-                    text-align: center;
+                    line-height: 46px;
                     color: #000;
                     margin: 45px;
-                    // @include desktop {
-                    // display: inline-flex;
-                    // // right: 40px;
-                    //     position: relative;
-                    //     right: 35px;
-                    // }
+                    @include desktop {
+                        float: right;
+                        position: absolute;
+                        right: 35px;
                     }
                 }
-            }
-            }
-            blockquote {
-                border-left: 8px solid red; 
             }
             p {
                 width: 377px;
@@ -268,15 +251,15 @@
                     font-size: 22px;
                     line-height: 46px;
                 }
-                // .info {
-                //     width: 470px;
-                //     // height: 294px;
-                //     font-family: "Noto Sans";
-                //     font-size: 26px;
-                //     font-weight: bold;
-                //     line-height: 42px;
-                //     color: #000;
-                // }
+                .info {
+                    width: 470px;
+                    // height: 294px;
+                    font-family: "Noto Sans";
+                    font-size: 26px;
+                    font-weight: bold;
+                    line-height: 42px;
+                    color: #000;
+                }
             }
             //p
             .red-btn {
@@ -345,7 +328,7 @@
             box-sizing: border-box;
             height: 139.76px;
             width: 480.27px;
-            position: relative;
+    position: relative;
 	border-radius: 10px;
 	font-family: 'Noto Sans';
 	font-size: 15px;
@@ -369,12 +352,8 @@
                     -moz-transform: rotateY(180deg);
                     -o-transform: rotateY(180deg);
                     transform: rotateY(180deg);
+                    cursor: pointer;
                 }
-                ::active{
-                        transform: translate(0px,5px);
-                    -webkit-transform: translate(0px,5px);
-                        border-bottom: 1px solid;
-                        }
                 .front {
                     height: auto;
                     text-align: center;
@@ -391,8 +370,8 @@
                     backface-visibility: hidden;
                 }
                 .features-back {
-                    width: 480px;
-                    height: 170px;
+                    // width: 480px;
+                    // height: 170px;
                     border: 1px solid #248E6A;
                     margin: 0;
                     text-align: center;
@@ -412,7 +391,7 @@
                 }
             }
         }
-        .features-green-btn {
+        .green-btn {
             color: #248E6A;
             text-decoration: none;
         }
