--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -37,24 +37,22 @@ $black:#000000;
 $white: #fff;
 
 
-// Typography for fonts ///
+// Typography ///
 $font_title: 'Asap';
 $font_footer_header: 'PT Sans';
 $font_body: 'Noto Sans';
 $font_main: 'Noto Sans';
-
 ///Font Sizing ///
-
 // mobile sizes ///
 $h1_size_mob: 2.5rem;
 $h2_size_mob: 2rem;
-$h3_size_mob: 1.5rem;
-$font_body_size_mob: 1.3rem;
+$h3_size_mob: 1.3rem;
+$font_body_size_mob: 1.6rem;
 
 
 /// desktop sizes ////
-$h1_size_desktop: 5rem;
-$h2_size_desktop: 3rem;
-$h3_size_desktop: 2.5rem;
-$font_body_size_desktop: 2rem;
+$h1_size_desktop: 3rem;
+$h2_size_desktop: 2.2rem;
+$h3_size_desktop: 1.7rem;
+$font_body_size_desktop: 1.7rem;
 $font_line-height-body: 1.5;
