--- a/themes/montessori-theme/sass/_content.scss
+++ b/themes/montessori-theme/sass/_content.scss
@@ -3,3 +3,13 @@
 --------------------------------------------------------------*/
 
 /* Posts and pages */
+
+
+#target {
+  background:#fff;
+  width:300px;
+  height:300px;
+  height:160px;
+  padding:5px;
+  display:none;
+}
