--- a/themes/montessori-theme/sass/_footer.scss
+++ b/themes/montessori-theme/sass/_footer.scss
@@ -18,6 +18,7 @@
 }
 /*block Items*/
 .footer-block-item1{
+@include desktop{width:1400px;}
   position: relative;
   width: 100%;
   padding: 10px 0 30px 0;
@@ -25,7 +26,11 @@ height: 30px;
   margin-top:-30px;
   ul{
   padding-left: 0px;
-    li{
+    li{@include desktop{
+      padding: 0 60px;
+      font-size: 1.3rem;
+      text-align: left;
+    };
       line-height: normal;
     font-size: 1.3rem;
     padding: 0 10px;
@@ -51,7 +56,7 @@ height: 30px;
 
   width: 100%;
 text-align: center;
-p{
+p{@include desktop{};
 margin: 0px auto;
 
 i{
@@ -83,13 +88,12 @@ i{
   p{
     margin: 0px;
   height: 20px;
-    @mixin center-block {}
     font-size: 1rem;
   }
 }
 /*the links in the footer */
 
-.footer-block-item1 li{@mixin center-block {}
+.footer-block-item1 li{
   a:hover{
     cursor: pointer;
   color: $color_btn_hover_green;
