styling about bage and nw program

--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -45,10 +45,11 @@ $font_body: 'Noto Sans',sans-serif;
 $font_main: 'Noto Sans',sans-serif;
 ///Font Sizing ///
 // mobile sizes ///
-$h1_size_mob: 1.9rem;
+$h1_size_mob: 2.25rem;
 $h2_size_mob: 1.6rem;
 $h3_size_mob: 1.2rem;
-$font_body_size_mob: 1.9rem;
+$font_body_size_mob: 1.6rem;
+$font_member_staff:1.375rem;
 
 
 /// desktop sizes ////
