--- a/themes/montessori-theme/sass/_about.scss
+++ b/themes/montessori-theme/sass/_about.scss
@@ -5,30 +5,23 @@
 
 * {
 	box-sizing: border-box;
-	font-size: $font_body_size_mob;
 }
 // @media screen and (max-width: 480px) {
 
 .about-wrapper {
-	max-width: $mobile_width;
 	margin: 0 auto;
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 2;
+	max-width: $mobile_width;
 	background-color: grey;
-
-	h1 {
-		font-family: $font_title;
-		font-weight: normal;
-		line-height: $basic_hline_height * 4.2;
-		text-align: left;
-		color: $black;
-	}
 }
-// about NW School Section
 
-// .about-school {}
+// about NW School Sectio
+.about-school {
+	border-bottom: solid 3px $color_btn_green;
+	padding-bottom: $basic_margin*7.8;
+}
 // Members List Section
-
 .members-list {
 	padding: 2px;
 	flex-wrap: wrap;
@@ -37,12 +30,11 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-around;
-
 		.members-block {
 			flex: 0.03;
 			display: flex;
+		  align-items: center;
 			flex-direction: column;
-			align-items: center;
 			@include tablet {
 				flex: 0.03;
 			}
@@ -50,8 +42,6 @@
 				flex: 1;
 			}
 		}
-
-
 	.flip-container {
 		display: block;
 		box-shadow: inset 1px 1px 40px 0 rgba(0,0,0,.45);
@@ -72,10 +62,10 @@
 			.members_det {
 				display: block;
 			}
-
 			p {
-				font-size: 50%;
-				line-height: 30px;
+				font-size: 1rem;
+				font-style: italic;
+				line-height:$basic_hline_height*2.4 ;
 			}
 		}
 
@@ -84,12 +74,10 @@
 			background-size: cover;
 			border-radius: 50%;
 			flex: 2;
-
 			img {
 				border-radius: 50%;
 			}
 		}
-
 		.back {
 			border-radius: 50%;
 			position: absolute;
@@ -104,14 +92,12 @@
 			transform: rotateY(180deg);
 		}
 	}
-
 	.flip-container.hover .flipper,
 	.flip-container:hover .flipper {
 		-webkit-transform: rotateY(180deg);
 		-moz-transform: rotateY(180deg);
 		transform: rotateY(180deg);
 	}
-
 	.back,
 	.flip-container,
 	.front {
@@ -125,71 +111,51 @@
 		-moz-backface-visibility: hidden;
 		backface-visibility: hidden;
 	}
-
 	.members_det {
 		text-align: center;
-
-		p {
-			font-size: 50%;
-		}
+		font-size: $font_member_staff;
 	}
 }
 }
-
-
-
-
-
 // Members at Large Section
 
 .members_at_large {
+	padding-bottom: $basic_margin*5.5;
+	border-bottom: solid 3px $color_btn_green;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-
 	.members_at_large-grid {
 		display: flex;
 		flex-wrap: wrap;
-		align-items: baseline;
-
+		justify-content: center;
 		.members_at_large-name {
+			font-size: $font_member_staff;
 			display: flex;
-			width: 27%;
+			width: 26%;
 			text-align: center;
 			margin: 1rem;
-
-			p {
-				display: block;
-				width: 33%;
-				padding: 5%;
-			}
 		}
 	}
 }
 // Meeting Minutes & Archive Section
-
 .event-grid {
 	display: flex;
 	flex-direction: column;
-
 	.news-img img {
 		width: 100%;
 	}
-
 	.archive-sec {
 		display: flex;
-
 		.green-btn {
 			align-self: baseline;
 			order: 1;
 		}
-
 		.green-btn {
 			align-self: flex-start;
 		}
 	}
 }
-
 .target {
 	background-color: grey;
 	width: 100%;
