--- a/themes/montessori-theme/sass/_nw-program.scss
+++ b/themes/montessori-theme/sass/_nw-program.scss
@@ -5,7 +5,6 @@
 
 * {
 	box-sizing: border-box;
-	font-size: $font_body_size_mob;
 }
 // @media screen and (max-width: 480px) {
 
@@ -16,15 +15,7 @@
 	padding-left: $basic_pading * 2;
 	padding-right: $basic_pading * 1.5;
 	align-items: center;
-
-	h1 {
-		font-family: Asap;
-		font-size: $h1_size_mob;
-		font-weight: normal;
-		line-height: $basic_hline_height * 4.2;
-		text-align: left;
-		color: $black;
-	}
+	background-color: grey;
 }
 // Section Why NW Program Section
 
@@ -119,22 +110,6 @@
 		.enroll-btn {
 			align-self: center;
 
-			.green-btn {
-				align-self: center;
-				height: 47px;
-				display: inline-block;
-				text-align: center;
-				background-color: #4FC8A1;
-				border-radius: 6px;
-				font-family: "Noto Sans";
-				font-size: 15px;
-				font-weight: bold;
-				text-align: center;
-				line-height: 30px;
-				color: #fff;
-				text-shadow: none;
-				letter-spacing: 0.8px;
-			}
 		}
 	}
 }
