--- a/themes/montessori-theme/sass/_variables.scss
+++ b/themes/montessori-theme/sass/_variables.scss
@@ -48,6 +48,7 @@ $font_main: 'Noto Sans',sans-serif;
 $h1_size_mob: 2.25rem;
 $h2_size_mob: 1.6rem;
 $h3_size_mob: 1.2rem;
+$font_school_info: 1.5rem;
 $font_body_size_mob: 1.6rem;
 $font_member_staff:1.375rem;
 
